Modal windows no longer break the layoutgit status! Fixes #1

--- a/css/main.css
+++ b/css/main.css
@@ -54,8 +54,8 @@ section {
   margin: 0 auto;
 }
 h1 {
-  margin-left: 5%;
-  margin-top: 4%;
+  padding-left: 5%;
+  padding-top: 3%;
 }
 .section-content {
   height: 100%;
@@ -114,9 +114,7 @@ h1 {
 .section-center {
   text-align: center;
   position: relative;
-  top: 30%;
-  left: 30%;
-  transform: translate(-30%, -30%);
+  padding-top: 200px;
 }
 .gallery {
   display: inline-block;
